# stradvision

./: .clang-format  .dockerignore  CMakeLists.txt  DESIGN.md  OPERATIONS.md  PERF.md  README.md
configs/: policy.json
diagram/: class_diagram.md  sequence_diagram.md
docker/: agent.Dockerfile  controller.Dockerfile  docker-compose.yml
docker/test/: agent-asan.Dockerfile  all_tests.Dockerfile  asan_test.Dockerfile  controller-asan.Dockerfile  docker-compose-asan.yml  duplicate_test.Dockerfile  integration_test.Dockerfile  message_parser_test.Dockerfile  retry_test.Dockerfile  unit_test.Dockerfile
include/agent/: Agent.hpp
include/controller/: AgentTcpSession.hpp  Controller.hpp  MetricsServer.hpp  MetricsTracker.hpp  StateStore.hpp
include/controller/policy/: Policy.hpp
include/core/comm/: TcpComm.hpp
include/core/interface/: IAgentComm.hpp  ICommandBus.hpp  IMessageParser.hpp  IPayload.hpp  IPolicyEngine.hpp  IStateStore.hpp
include/core/memory/: MemoryPool.hpp
include/core/message/: BinaryMessageParser.hpp  Header.hpp  Message.hpp  MessageType.hpp  Payloads.hpp
include/core/message/payload/: AckPayload.hpp  CmdControlPayloads.hpp  CmdSetModePayload.hpp  HeartbeatPayload.hpp  HelloPayload.hpp  NackPayload.hpp  StatePayload.hpp
include/core/pool/: MessagePool.hpp
include/core/utils/: ByteSerializer.hpp
scripts/: fault_injector.py  run_all_tests.ps1  run_all_tests.sh  run_asan_tests.ps1  run_asan_tests.sh  run_command_retry_test.ps1  run_command_retry_test.sh  run_duplicate_test.ps1  run_duplicate_test.sh  run_integration_test.ps1  run_integration_test.sh  run_message_parser_test.ps1  run_message_parser_test.sh  run_sanitizers.sh  run_system_asan.ps1  run_system_asan.sh  run_unit_tests.ps1  run_unit_tests.sh
src/: CMakeLists.txt
src/agent/: Agent.cpp  CMakeLists.txt  main.cpp
src/controller/: AgentTcpSession.cpp  CMakeLists.txt  Controller.cpp  MetricsServer.cpp  StateStore.cpp  main.cpp
src/core/: CMakeLists.txt
src/core/comm/: TcpComm.cpp
src/core/message/: BinaryMessageParser.cpp  Message.cpp
src/core/message/payload/: AckPayload.cpp  CmdSetModePayload.cpp  HeartbeatPayload.cpp  HelloPayload.cpp  NackPayload.cpp  StatePayload.cpp
tests/: CMakeLists.txt  device_simulator_test.cpp
tests/include/test_utils/: MockFaultyComm.hpp
tests/src/: CommandRetryTest.cpp  DuplicateMessageTest.cpp  IntegrationTest.cpp  MessageParserTest.cpp  PayloadTest.cpp  SessionTimeoutTest.cpp
tests/src/test_utils/: MockFaultyComm.cpp
